The footer text is hidden for now, until we fix the bug where it overlaps other text.
git-svn-id: https://research-cs194.googlecode.com/svn/trunk/research@217 3207efe2-bddd-11de-9616-7b1d4728551e

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -127,6 +127,9 @@ width: 100%;
 }
 
 #footer{
+	/* hide the footer for now */
+	display: none;
+	
 	position: absolute;
 	bottom: 0;
 	width: 100%;
